--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.wyattbarnes.udacityproject"
+        applicationId "com.wyattbarnes.udacityportfolio"
         minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
